fix label vertical align when long labels
datatables advanced search

--- a/abilian/web/resources/less/datatables.less
+++ b/abilian/web/resources/less/datatables.less
@@ -34,3 +34,18 @@
     }
   }
 };
+
+/* Advanced search filters */
+.advanced-search-filters {
+  
+  .criterion .control-label {
+    /* close button */
+    > .close {
+      float: left;
+      }
+    
+    > label {
+        display: inline;
+      }
+  }
+}
