--- a/abilian/web/resources/less/search.less
+++ b/abilian/web/resources/less/search.less
@@ -15,12 +15,3 @@
     font-weight: bold;
   }
 }
-
-.advanced-search-filters {
-  .criterion {
-    /* close button */
-    > div:first-child .close {
-      float: left;
-    }
-  }
-}
